examples/test/testpolicy5016.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5016
  namespace: namespace460
spec:
  podSelector:
    matchLabels:
      key32: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value30
      podSelector:
        matchLabels:
          key9: value38
          key0: value14
          key10: value0
